syntax = "proto3";

package protos;

option go_package = "github.com/charliego3/pallas/examples/protos;pb";

import "google/api/annotations.proto";

service User {
    rpc Register(RegisterRequest) returns (LoginReply) {
        option (google.api.http) = {
            post: "/user/register"
        };
    }

    rpc Login(LoginRequest) returns (LoginReply) {
        option (google.api.http) = {
            post: "/user/login"
        };
    }
}

message RegisterRequest {
    string unique = 1;
    string uname = 2;
    string email = 3;
    string code = 4;
    string password = 5;
}

message LoginRequest {
    string unique = 1;
    string uname = 2;
    string code = 3;
    string password = 4;
}

message LoginReply {
    string message = 1;
}
